# 02022020

./: .gitignore  CMakeLists.txt
src/: constants.h  main.cpp
src/colors/: color.h  colors.cpp  colors.h
src/effect/: effect.cpp  effect.h  effect_manager.cpp  effect_manager.h
src/game/: game.cpp  game.h
src/sdl/: renderer.cpp  renderer.h  texture.cpp  window.cpp  window.h
